--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
-    --botao-azul: #167BF7;
+    --botao-azul: #167bf78a;
     --cor-fundo: #00030C;
     --font-principal:'Inter';
 }
